--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
+<!--
+    <link rel="stylesheet" href="public/materialize-v1.0.0/materialize/css/materialize.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+--> 
     <link rel="stylesheet" href="public/bootstrap-4.1.1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="public/bootstrap-4.1.1-dist/css/bootstrap-grid.css">
     <link rel="stylesheet" href="public/css/header.css">
@@ -48,8 +51,23 @@
     <main class="main">
         <div class="container">
             <div class="row">
-
-            </div>
+                <div class="col-2">
+                  <div class="card">
+                    <div class="card-image" style="background-size:auto">
+                      <img src="public/img/2.jpg" class="card-img-top"> 
+                      <span class="c-title">Card Title</span>
+                      <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                      <p>I am aeffectively.</p>
+                    </div>
+                    <div class="card-action">
+                      <a href="#">This is a link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+             
         </div>
     </main>
 
@@ -60,5 +78,7 @@
     <script src="public/jquery-3.1.0.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="public/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
+  <!--  <script src="public/materialize-v1.0.0/materialize/js/materialize.min.js"></script> -->
+    
 </body>
 </html>
